--- a/style.css
+++ b/style.css
@@ -1,27 +1,32 @@
 div#codewrittendiv {
 	width: 47%;
 	height: 80.7%;
-	border: 0.6px solid black;
+	border: 0.6px solid rgb(27, 27, 27);
 	position: absolute;
 	top: 14.2%;
 	right: 0.2%;
 	padding-top: 2%;
 	padding-left: 2%;
 	font-size: 25px;
-	background-color: #f2e6e6;
+	background-color: #ececec;
 }
 
-
+body {
+	background-color: darkgray;
+}
 h1#myh1  {
 	text-align: center;
 	font-size: 22px;
+	font-style: oblique;
+	
 }
 
 textarea#codearea  {
 	width: 50%;
 	height: 86.5%;
 	border: 0.5px solid black;
-	background-color: #ddeef5;
+	background-color: #6d6868;
+	color: white;
 	padding-top: 2%;
 	padding-left: 2%;
 	font-size: 17px;	
